# etiss-xvalid

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/py_etiss_xvalid/: README.md  technical-documentation.md
include/etiss/xvalid/: CpuArchConfig.h  DataReadTracer.h  DataWriteTracer.h  ISAExtensionValidator.h  InstructionTracer.h  TraceFileWriter.h
py_etiss_xvalid/: __main__.py  dwarf_info_extractor.py  dwarf_simdata_merger.py  etiss_simulation.py  verification_stage.py
py_etiss_xvalid/entity/dwarf/: dwarf_info.py  formal_parameter.py  frame_base_info.py  global_variable.py  local_variable.py  march_manager.py  subprogram.py  types.py  var_and_param_base.py
py_etiss_xvalid/entity/march/: rv32.py  rv32im_zicsr_zifencei.py  rv32imac_zicsr.py  rv32imafdc_zicsr_zifencei.py
py_etiss_xvalid/entity/simulation/: simulation_data_collection.py  simulation_data_entry.py
py_etiss_xvalid/entity/verification/: rv32_return_register_layout.py  verification_entry.py
py_etiss_xvalid/util/: arg_parser.py  logger.py  logo.py  trace_parser.py
scripts/python/py_validator_pipeline/: main.py
scripts/python/py_validator_pipeline/src/: dwarf_info_extractor.py  dwarf_simdata_merger.py  etiss_simulation.py  verification_stage.py
scripts/python/py_validator_pipeline/src/entity/dwarf/: compilation_unit.py  dwarf_info.py  formal_parameter.py  global_variable.py  local_variable.py  march_manager.py  subprogram.py  var_and_param_base.py
scripts/python/py_validator_pipeline/src/entity/march/: march_base.py  rv32.py  rv32im_zicsr_zifencei.py  rv32imac_zicsr.py  rv32imafdc_zicsr_zifencei.py
scripts/python/py_validator_pipeline/src/entity/simulation/: simulation_data_collection.py  simulation_data_entry.py
scripts/python/py_validator_pipeline/src/entity/verification/: rv32_return_register_layout.py  (+1 more)
scripts/python/py_validator_pipeline/src/exception/: pipeline_exceptions.py
scripts/python/py_validator_pipeline/src/util/: gcc_dwarf_rv_mapper.py  peekable_iter.py  trace_parser.py
scripts/python/py_validator_pipeline/test/: dwarf_info_extractor_test.py
src/: DataReadTracer.cpp  DataWriteTracer.cpp  ISAExtensionValidator.cpp  InstructionTracer.cpp  TraceFileWriter.cpp  XValidLibrary.cpp
tests/: dwarf_info_extractor_test.py
tests/entity/dwarf/: dwarf_info_test.py
tests/entity/simulation/: __init__.py  simulation_data_entry_test.py
tests/entity/verification/: rv32_return_register_layout_test.py
tests/integration/: etiss_trace_generation_test.py
tests/util/: trace_parser_test.py
(+3 files in other folders)
