[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "py-etiss-xvalid"
version = "0.1.0"
description = "ETISS xvalid Python validator pipeline"
requires-python = ">=3.10"
dependencies = [
    "pyelftools==0.32",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.1",
]

[project.scripts]
py-etiss-xvalid = "py_etiss_xvalid.__main__:main"

[tool.setuptools.packages.find]
include = ["py_etiss_xvalid*"]
